# exercice-python

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: wordcount.py
tests/: test_wordcount.py
