[tool.poetry]
name = "exercice-python"
version = "0.1.0"
description = ""
# TODO compléter l'auteur
authors = [""]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"

[tool.poetry.scripts]
wordcount = "src.wordcount:main"
